classDiagram
    class Admin {
        +int id
        +string username
        +string name
        +string email
        +string role
        +password password
        +timestamps
        +login()
        +logout()
    }

    class Anggota {
        +int id
        +int parent_id
        +int parent_id_cabang
        +string nama
        +string email
        +string telepon
        +string alamat
        +date tanggal_lahir
        +string jenis_kelamin
        +string pekerjaan
        +string jabatan
        +string status
        +array aktif_di
        +timestamps
        +login()
        +logout()
        +getUmurAttribute()
        +scopeAktif()
    }

    class RiwayatKegiatan {
        +int id
        +int parent_id
        +string judul
        +string deskripsi
        +date tanggal_kegiatan
        +time waktu_mulai
        +time waktu_selesai
        +string lokasi
        +string jenis_kegiatan
        +string status
        +string penyelenggara
        +string dokumentasi
        +timestamps
        +getDurasiAttribute()
        +scopeTerlaksana()
    }

    class AbsensiKegiatan {
        +int id
        +int anggota_id
        +int riwayat_kegiatan_id
        +datetime waktu_absen
        +string status_kehadiran
        +string ikut_serta_sebagai
        +string keterangan
        +string bukti_kehadiran
        +timestamps
        +scopeHadir()
    }

    class SertifikatAnggota {
        +int id
        +int anggota_id
        +int riwayat_kegiatan_id
        +string nomor_sertifikat
        +date tanggal_terbit
        +string penyelenggara
        +string file_sertifikat
        +timestamps
    }

    class Lms {
        +int id
        +string title
        +string slug
        +string description
        +text content
        +string category
        +string level
        +string status
        +string cover
        +timestamps
    }

    class Keuangan {
        +int id
        +int parent_id
        +string jenis
        +decimal jumlah
        +string kategori
        +string keterangan
        +date tanggal
        +string sumber
        +string penerima
        +string bukti
        +timestamps
        +scopeMasuk()
        +scopeKeluar()
    }

    class MeetingNote {
        +int id
        +int parent_id
        +string document_no
        +string project_name
        +date meeting_date
        +string type_of_meeting
        +string attendance
        +text meeting_result
        +text on_progress
        +text akan_dilakukan
        +timestamps
    }

    class Pengajuan {
        +int id
        +string judul_pengajuan
        +date tanggal_pengajuan
        +int parent_id
        +string status
        +text deskripsi
        +string link_berkas
        +timestamps
    }

    class Wilayah {
        +int id
        +string nama
        +string tipe
        +string kode
        +int parent_id
        +string deskripsi
        +string status
        +timestamps
    }

    Admin "1" -- "N" Anggota : manages
    Anggota "1" -- "N" AbsensiKegiatan : has
    RiwayatKegiatan "1" -- "N" AbsensiKegiatan : has
    Anggota "1" -- "N" SertifikatAnggota : receives
    RiwayatKegiatan "1" -- "N" SertifikatAnggota : generates
    Wilayah "1" -- "N" Wilayah : parent-child
    Admin "1" -- "N" Pengajuan : receives
